welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: class Array takes type parameters
  val T : Array = definirCouleurs()
          ^Array1:3: error: class Array takes type parameters
  val T : Array = definirCouleurs()
          ^Array1:31: error: class Array takes type parameters
def faireLigneCouleurs(T:Array){
                         ^Array1:28: warning: enclosing method definirCouleurs has result type Unit: return value discarded
  return T
  ^Array1:31: error: class Array takes type parameters
def faireLigneCouleurs(T:Array){
                         ^